# doorlight-apis

./: .gitignore  Dockerfile  README.md
client/: index.html  package-lock.json  pnpm-lock.yaml  vite.config.js
client/src/components/: App.jsx  SessionControls.jsx
server/: .env.sample  .gitignore  app.py  logger.py  pyproject.toml
server/src/handlers/: machine_handler.py  socket_handler.py
server/src/routes/: openai_route.py
